--- a/src/app/components/film-page/film-page.component.scss
+++ b/src/app/components/film-page/film-page.component.scss
@@ -54,12 +54,13 @@
       .array-container {
         display: inline-block;
         text-align: center;
-        p {
+        button {
           padding: 0.5em 1em;
           margin: 0 1em 1em 1em;
           border: 2px solid white;
           border-radius: 20px;
           text-align: center;
+
         }
       }
 
