--- a/src/app/components/user-rating/user-rating.component.scss
+++ b/src/app/components/user-rating/user-rating.component.scss
@@ -15,9 +15,10 @@
   align-items: center;
   background-color: #673ab7;
   border-radius: 20px;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   color: white;
+  font-size: 1em;
  }
 
 .hidden {
