--- a/src/app/components/user-rating/user-rating.component.scss
+++ b/src/app/components/user-rating/user-rating.component.scss
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #673ab7;
+  background-color: var(--purple);
   border-radius: 20px;
   width: 30px;
   height: 30px;
