--- a/src/app/components/viewing-collection/viewing-collection.component.html
+++ b/src/app/components/viewing-collection/viewing-collection.component.html
@@ -1,4 +1,5 @@
- <div class="title-header">
+<ng-container *ngFor="let film of films$ | async; index as i">
+  <div class="title-header">
   <div class="title-header-container">
     <p class="item-number">№</p>
     <p class="item-title">Название</p>
@@ -7,12 +8,12 @@
     <p>Оценка</p>
   </div>
  </div>
-<ng-container *ngFor="let film of films$ | async; index as i">
+
 
   <div class = "collection-film-container" [ngClass]="{'odd': 1%2==0, 'even': i%2!=0}">
-    <div class="title-link" routerLink="/catalog/{{film.id}}">
+    <div class="title-link" >
      <span>{{i+1}}.</span>
-     <div class="title-container">
+     <div class="title-container" routerLink="/catalog/{{film.id}}">
       <p>{{ film.rusTitle }} ({{film.year}})</p>
       <p class = "italic">{{ film.title}}</p>
      </div>
