--- a/src/app/components/veto-collection/veto-collection.component.scss
+++ b/src/app/components/veto-collection/veto-collection.component.scss
@@ -1,9 +1,9 @@
 .odd {
-  background-color: #DCDCDC;
+  background-color: var(--gainsboro);
 }
 
 .even {
-  background-color: #8673A1;
+  background-color: #987654;
 }
 
 .title-link {
