--- a/src/app/components/viewing-collection/viewing-collection.component.scss
+++ b/src/app/components/viewing-collection/viewing-collection.component.scss
@@ -1,9 +1,9 @@
 
 .odd {
-  background-color: #DCDCDC;
+  background-color: var(--gainsboro);
 }
 
 .even {
-  background-color: #9C9C9C;
+  background-color: var(--old-silver);
 }
 
