--- a/src/app/components/user-rating/user-rating.component.scss
+++ b/src/app/components/user-rating/user-rating.component.scss
@@ -14,6 +14,8 @@
   justify-content: center;
   align-items: center;
   background-color: var(--purple);
+  font-family: var(--Forum);
+  font-weight: bold;
   border-radius: 20px;
   width: 30px;
   height: 30px;
