--- a/src/app/components/viewing-collection/viewing-collection.component.html
+++ b/src/app/components/viewing-collection/viewing-collection.component.html
@@ -1,27 +1,19 @@
 
-  <div class="title-header">
-  <div class="title-header-container">
-    <p class="item-number">№</p>
-    <p class="item-title">Название</p>
-    <p class="item-director">Режиссёр</p>
-    <p class="item-rating">Рейтинг</p>
-    <p>Оценка</p>
-  </div>
- </div>
+  <table class="collection-film-container">
+    <th>№</th>
+    <th>Название</th>
+    <th>Режиссёр</th>
+    <th>Рейтинг</th>
+    <th>Оценка</th>
 
-<ng-container *ngFor="let film of films$ | async; index as i">
-  <div class = "collection-film-container" [ngClass]="{'odd': 1%2==0, 'even': i%2!=0}">
-    <div class="title-link" >
-     <span>{{i+1}}.</span>
-     <div class="title-container" routerLink="/catalog/{{film.id}}">
-      <p>{{ film.rusTitle }} ({{film.year}})</p>
-      <p class = "italic">{{ film.title}}</p>
-     </div>
-     <p class = "director">{{film.director}}</p>
-     <p class = "film-rating">{{film.rating}}</p>
-      <div class = "rating-container">
-      <app-user-rating [userId]="user.id" [filmId]="film.id" [visibility]="visibility"></app-user-rating>
-    </div>
-  </div>
-  </div>
-</ng-container>
+    <ng-container *ngFor="let film of films$ | async; index as i">
+      <tr [ngClass]="{'odd': 1%2==0, 'even': i%2!=0}">
+        <td>{{ i+1 }}</td>
+        <td class="td-start"> <p>{{film.rusTitle}}</p><p class="italic">{{ film.title }}</p></td>
+        <td>{{ film.director }}</td>
+        <td>{{ film.rating }}</td>
+        <td><app-user-rating [userId]="user.id" [filmId]="film.id" [visibility]="visibility"></app-user-rating></td>
+      </tr>
+    </ng-container>
+
+  </table>
