add guard & buffer

--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -44,6 +44,19 @@
           </mat-icon>
           Изменить пароль или почту
         </button>
+
+        <button
+          mat-raised-button
+          color="accent"
+          (click)="goToAdminPage()"
+        >
+          <mat-icon>
+            <span class="material-symbols-outlined">
+              admin_panel_settings
+              </span>
+          </mat-icon>
+          Перейти к администрированию
+        </button>
       </div>
     </div>
     <div class="user-page-button">
