--- a/src/app/components/catalog-page/catalog-page.component.html
+++ b/src/app/components/catalog-page/catalog-page.component.html
@@ -4,7 +4,7 @@
         <button
         mat-raised-button
         color = "accent"
-        (click)="showGovenment()"
+        (click)="showGovenment(user)"
         >
         <mat-icon>
         <span class="material-symbols-outlined">
