--- a/src/styles.scss
+++ b/src/styles.scss
@@ -219,7 +219,8 @@ app-footer {
     margin: 0 auto;
     width: 240px;
     color: white;
-
+    margin-bottom: 1em;
+    padding: 0;
   }
   }
 
@@ -230,6 +231,121 @@ app-footer {
 .film-card-v {
   background-color: #FFCC00;
   color: black;
+}
+
+.film-page {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 90%;
+  height: 100vh;
+  margin: 2em auto;
+  background-color: #321011;
+
+  .film-page-header,
+  .film-page-body {
+    display: flex;
+    margin:  0 1.5em;
+
+    .film-page-name-container {
+
+      h2 {
+        margin: 0.5em 0;
+        font-size: 2em;
+      }
+
+    }
+
+    .header-right {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    app-movie-rating {
+      margin-bottom: 1em;
+    }
+  }
+
+  .film-page-header {
+    justify-content: space-between;
+  }
+
+  .film-page-body {
+
+    img {
+      margin: 1em 0;
+      width: 25%;
+    }
+
+    .film-information-container {
+      margin: 1em 2em;
+      width: 75%;
+
+      p {
+        text-align:justify;
+      }
+
+      .array-container {
+        display: inline-block;
+        text-align: center;
+        button,
+        p {
+          padding: 0.5em 1em;
+          margin: 0 1em 1em 1em;
+          border: 2px solid white;
+          border-radius: 20px;
+          text-align: center;
+
+        }
+      }
+
+      .film-notes-container {
+        p {
+          text-align:justify;
+        }
+      }
+
+    }
+    .film-link-container {
+      margin: 2em 2em 2em 0;
+      width:15%;
+
+      a{
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        margin: 1em;
+      }
+
+      button {
+        margin: 1.5em 0;
+        width: 100%;
+      }
+
+    }
+
+  }
+  .review-form-button {
+    width: 20%;
+    margin: 0 auto;
+  }
+}
+
+.film-buffer-container {
+  height: 420px;
+
+  p {
+    padding-top: 1em;
+    margin: 0;
+  }
+
+  img {
+    height: 250px;
+    width: 170px;
+    margin: 0 auto;
+    padding: 1em;
+  }
 }
 
 
