--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -47,7 +47,7 @@
      <ng-container *ngIf="currentUser$ | async as user; else loginOrRegister">
         <button
            mat-stroked-button
-           color="white"  routerLink="/user/{{ user.id }}">
+           color="white"  routerLink="/user">
            <mat-icon
               aria-label="Example face icon"
               >
