--- a/src/app/components/user-text-review/user-text-review.component.html
+++ b/src/app/components/user-text-review/user-text-review.component.html
@@ -1,8 +1,8 @@
 <div *ngFor="let item of _textfeedbackList | async" class="comment-container" [ngClass]="{'good': item.typeReview==='good', 'neutral':item.typeReview==='neutral', 'bad': item.typeReview==='bad'}" routerLink="/users/{{item.id}}">
   <div class="comment-header">
     <div class = "image-title-container" >
-      <img *ngIf="item.avatar" [src]="item.avatar"  />
-      <img *ngIf="!item.avatar" src="https://i.pinimg.com/280x280_RS/04/ff/49/04ff4992f981e4672fa824a6ab6ffea6.jpg" />
+      <img *ngIf="item.avatar" [src]="item.avatar" routerLink="/user/{{item.id}}" />
+      <img *ngIf="!item.avatar" src="https://i.pinimg.com/280x280_RS/04/ff/49/04ff4992f981e4672fa824a6ab6ffea6.jpg" routerLink="/user/2" />
       <span class="comment-title">{{ item.name }}</span>
     </div>
     <div class = "date-container">
