--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -1,7 +1,73 @@
 <div class="user-page">
-  <ng-container *ngIf="watchUser">
-    <H1>{{watchUser.name}} слуга императора Котовечества</H1>
+  <ng-container *ngIf="watchUser as user; else CurrentUser">
+    <div class="user-page-header">
+      <img img *ngIf="user.avatar" [src]="user.avatar" [alt]="user.name" />
+      <img
+        img
+        *ngIf="!user.avatar"
+        src="https://i.pinimg.com/280x280_RS/04/ff/49/04ff4992f981e4672fa824a6ab6ffea6.jpg"
+        [alt]="user.name"
+      />
+      <div class="user-page-header-middle">
+        <h2>{{ user.name }}</h2>
+        <p><span>Email:</span> {{ user.email }}</p>
+        <div>
+          <div *ngIf="user.personalData.realName">
+            <span>Имя:</span> {{ user.personalData.realName }}
+          </div>
+          <div *ngIf="user.personalData.country">
+            <span>Страна:</span> {{ user.personalData.country }}
+          </div>
+          <div *ngIf="user.personalData.about">
+            <span>Обо мне:</span> {{ user.personalData.about }}
+          </div>
+          <div *ngIf="user.personalData.link">
+            <span>Cоциальные сети:</span> {{ user.personalData.link }}
+          </div>
+        </div>
+      </div>
+      <!---<div class="user-page-right">
+        <button mat-raised-button color="accent" (click)="showInformationModal(user)">
+          <mat-icon>
+            <span class="material-symbols-outlined"> record_voice_over </span>
+          </mat-icon>
+          Рассказать о себе
+        </button>
+
+        <button
+          mat-raised-button
+          color="accent"
+          (click)="showRegistrationInformationModal(user)"
+        >
+          <mat-icon>
+            <span class="material-symbols-outlined"> contacts </span>
+          </mat-icon>
+          Изменить пароль или почту
+        </button>
+
+        <button
+          mat-raised-button
+          color="accent"
+          (click)="goToAdminPage()"
+        >
+          <mat-icon>
+            <span class="material-symbols-outlined">
+              admin_panel_settings
+              </span>
+          </mat-icon>
+          Перейти к администрированию
+        </button>
+      </div>--->
+    </div>
+    <div class="user-page-button">
+      <button (click)="activePage = 'score'">Оценки</button>
+      <button (click)="activePage = 'review'" class="review">Отзывы</button>
+    </div>
+    <div class="user-page-body viewing-page" *ngIf="activePage === 'score'"><app-viewing-collection [user]="user"></app-viewing-collection></div>
+    <div class="user-page-body" *ngIf="activePage === 'review'"><app-film-text-review [user]="user" [ngClass]="'active'"></app-film-text-review></div>
   </ng-container>
+
+  <ng-template #CurrentUser>
   <ng-container *ngIf="user$ | async as user">
     <div class="user-page-header">
       <img img *ngIf="user.avatar" [src]="user.avatar" [alt]="user.name" />
@@ -48,6 +114,7 @@
           Изменить пароль или почту
         </button>
 
+        <ng-container *ngIf="user.rules=='admin'">
         <button
           mat-raised-button
           color="accent"
@@ -60,6 +127,7 @@
           </mat-icon>
           Перейти к администрированию
         </button>
+        </ng-container>
       </div>
     </div>
     <div class="user-page-button">
@@ -71,4 +139,5 @@
     <div class="user-page-body veto-page" *ngIf="activePage === 'veto'"><app-veto-collection [user]="user" [ngClass]="'active'"></app-veto-collection></div>
     <div class="user-page-body" *ngIf="activePage === 'review'"><app-film-text-review [user]="user" [ngClass]="'active'"></app-film-text-review></div>
   </ng-container>
+</ng-template>
 </div>
