--- a/src/app/components/user-page/user-page.component.scss
+++ b/src/app/components/user-page/user-page.component.scss
@@ -47,6 +47,11 @@
   .user-page-right {
    display: flex;
    flex-direction: column;
+
+
+    button {
+      margin:0.5em;
+    }
   }
 }
   .user-page-button {
