--- a/src/app/components/viewing-collection/viewing-collection.component.html
+++ b/src/app/components/viewing-collection/viewing-collection.component.html
@@ -6,10 +6,10 @@
     <th>Рейтинг</th>
     <th>Оценка</th>
 
-    <ng-container *ngFor="let film of films$ | async; index as i">
+    <ng-container *ngFor="let film of films$ | async; index as i" >
       <tr [ngClass]="{'odd': 1%2==0, 'even': i%2!=0}">
         <td>{{ i+1 }}</td>
-        <td class="td-start"> <p>{{film.rusTitle}}</p><p class="italic">{{ film.title }}</p></td>
+        <td class="td-start" routerLink="/catalog/{{film.id}}"> <p>{{film.rusTitle}}</p><p class="italic">{{ film.title }}</p></td>
         <td>{{ film.director }}</td>
         <td>{{ film.rating }}</td>
         <td><app-user-rating [userId]="user.id" [filmId]="film.id" [visibility]="visibility"></app-user-rating></td>
