--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -26,38 +26,25 @@
           </div>
         </div>
       </div>
-      <!---<div class="user-page-right">
-        <button mat-raised-button color="accent" (click)="showInformationModal(user)">
+      <div class="user-page-right">
+        <button mat-raised-button color="accent">
           <mat-icon>
             <span class="material-symbols-outlined"> record_voice_over </span>
           </mat-icon>
-          Рассказать о себе
+          Написать сообщение
         </button>
 
         <button
           mat-raised-button
           color="accent"
-          (click)="showRegistrationInformationModal(user)"
         >
           <mat-icon>
             <span class="material-symbols-outlined"> contacts </span>
           </mat-icon>
-          Изменить пароль или почту
+          Добавить в друзья
         </button>
 
-        <button
-          mat-raised-button
-          color="accent"
-          (click)="goToAdminPage()"
-        >
-          <mat-icon>
-            <span class="material-symbols-outlined">
-              admin_panel_settings
-              </span>
-          </mat-icon>
-          Перейти к администрированию
-        </button>
-      </div>--->
+      </div>
     </div>
     <div class="user-page-button">
       <button (click)="activePage = 'score'">Оценки</button>
