--- a/src/app/components/film-text-review/film-text-review.component.html
+++ b/src/app/components/film-text-review/film-text-review.component.html
@@ -7,8 +7,13 @@
         <span class="italic">{{ item.title}}</span>
       </div>
     </div>
+    <div class="notes-container">
+    <div class="light-detector" [ngClass]="{'red':item.reviewState==false, 'green': item.reviewState==true, 'yellow':item.reviewState=='wait' }">
+    </div>
     <div class = "date-container">
       <span>{{item.dateReview}}</span>
+    </div>
+
     </div>
   </div>
   <div class="comment-text">
