--- a/src/app/components/admin-page/admin-page.component.scss
+++ b/src/app/components/admin-page/admin-page.component.scss
@@ -7,4 +7,53 @@
   margin: 3em auto;
   border-radius: 20px;
   background-color: black;
+
+  .buffer-comment-container {
+    margin: 4vh auto;
+    width: 50%;
+    border: 2px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    color:black;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+    .buffer-comment-header {
+      display: flex;
+      padding: 2% 2% 2% 2%;
+      width: 100%;
+      border-bottom: grey 2px solid;
+
+      app-user-link,
+      .date-container{
+        display: flex;
+        width: 50%;
+        justify-content: space-between;
+      }
+
+      .date-container {
+        display:flex;
+        flex-direction: column;
+        justify-content: end;
+        align-items: end;
+        width: 50%;
+
+        button {
+          width: 10em;
+          margin: 0.5em 0;
+        }
+      }
+
+    }
+
+    .comment-text {
+      width: 100;
+      padding: 2% 2%;
+
+      p {
+        font-size: 1em;
+        text-align: justify;
+      }
+    }
+  }
 }
